--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -1,5 +1,12 @@
 {
   "hello": "Hello",
+  "navbar": {
+    "about": "About",
+    "projects": "Projects",
+    "education": "Education",
+    "skills": "Skills",
+    "interests": "Interests"
+  },
   "aboutPage": {
     "introduction": {
       "greetings": "Hi, I'm",
@@ -10,6 +17,43 @@
       "part1": "I have a bachelor degree in Computer Science at the university UNESP in Bauru. My completion of course work was about the use of non-linear programming to the dimentions of an Indian Biodigester (Develeoped using Java).",
       "part2": "The last few years I worked with logistics, but I am currently looking for a jog as a developer (Java / Javascript / C) and I am currently working on personal and frellance projects.",
       "part3": "I am currently studying AWS Lambda and S3 and I am mainly interested in focussing on back-end development."
+    }
+  },
+  "projectsPage": {
+    "droneDelivery": {
+      "title": "Drone Delivery",
+      "description": {
+        "part1": "Jodo desenvolvido para Android utilizando a engine de jogos Godot 3.2. Primeiro jogo desenvolvido utilizando essa engine portanto é um jogo simples.",
+        "part2": "Para deixar o jogo mais interessante, eu fiz uma implementação de um algoritmo de simulação de \"rebanho\" de passáros (Boids) que originalmente foi desenvolvido por Crag Reynolds in 1989"
+      }
+    },
+    "boidsReactP5": {
+      "title": "Boids Com React e P5",
+      "description": {
+        "part1": "Reutilizei a minha implementação de boids do jogo Drone Delivery para testar a biblioteca de \"desenhos\" e animações p5.js junto com React.",
+        "part2": "O objetivo desse teste foi para verificar a viabilidade dessa biblioteca p5.js para visualização de algoritmos e simulações dentro de projetos feitos com React."
+      }
+    },
+    "abyssalDive": {
+      "title": "Abyssal Dive",
+      "description": {
+        "part1": "Jodo desenvolvido em Java para Android utilizando o framework libGDX juntamente com Android Studio.",
+        "part2": "O jogo consiste de controlar um submarino desviando de obstaculos e pegando baterias. Quanto mais o jogador desce, mais escuro o ambiente fica e mais necessárias as baterias são para poder utilizar a luz do submarino para ver os obstáculos."
+      }
+    },
+    "kawaiiChat": {
+      "title": "KawaiiChat",
+      "description": {
+        "part1": "App para Android no estilo tinder onde pessoas podem que gostam de animações japonesas podem encontrar pessoas com gostos similares e próxima para conversar, responder quizzes, personalizar o perfil e enviar presentes.",
+        "part2": "Desenvolvido em Java utilizando Android Studio para desenvolver o FrontEnd e foi utilizado principalment Firebase Firestore e Firebase Cloud Functions para o BackEnd.",
+        "part3": "As Cloud Functions foram desenvolvidas em Typescript (Node.js), para encontrar usuários com base na localização foram utilizadas GeoHashs, as imagems de usuários foram armazenadas com a utilização do Firebase Cloud Storage e por fim foi utilizado AdMob para exibir propagandas."
+      }
+    },
+    "investmentBlog": {
+      "title": "InvestmentBlog (em desenvolvimento)",
+      "description": {
+        "part1": "Em desenvolvimento (utilizando MERN stack e Docker)"
+      }
     }
   }
 }
