--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -1,5 +1,4 @@
 {
-  "hello": "Hello",
   "navbar": {
     "about": "About",
     "projects": "Projects",
@@ -23,22 +22,22 @@
     "droneDelivery": {
       "title": "Drone Delivery",
       "description": {
-        "part1": "Jodo desenvolvido para Android utilizando a engine de jogos Godot 3.2. Primeiro jogo desenvolvido utilizando essa engine portanto é um jogo simples.",
-        "part2": "Para deixar o jogo mais interessante, eu fiz uma implementação de um algoritmo de simulação de \"rebanho\" de passáros (Boids) que originalmente foi desenvolvido por Crag Reynolds in 1989"
+        "part1": "Android game developed with the engine Godot 3.2. That's the first game that I developed with this engine, so it's a simple game.",
+        "part2": "To make the game more interesting, I implemented a flock simulation algorithm (Boids) based on the originally developed by Craig Reynolds in 1989."
       }
     },
     "boidsReactP5": {
       "title": "Boids Com React e P5",
       "description": {
-        "part1": "Reutilizei a minha implementação de boids do jogo Drone Delivery para testar a biblioteca de \"desenhos\" e animações p5.js junto com React.",
-        "part2": "O objetivo desse teste foi para verificar a viabilidade dessa biblioteca p5.js para visualização de algoritmos e simulações dentro de projetos feitos com React."
+        "part1": "I reused my boids implementations from the game Drone Delivery to try the skektchs library p5.js with React.",
+        "part2": "The objective of this test was to verify the viability of using p5.js to make visualizations of algorithms and simulations with React."
       }
     },
     "abyssalDive": {
       "title": "Abyssal Dive",
       "description": {
-        "part1": "Jodo desenvolvido em Java para Android utilizando o framework libGDX juntamente com Android Studio.",
-        "part2": "O jogo consiste de controlar um submarino desviando de obstaculos e pegando baterias. Quanto mais o jogador desce, mais escuro o ambiente fica e mais necessárias as baterias são para poder utilizar a luz do submarino para ver os obstáculos."
+        "part1": "Android game developed with Java on Android Studio using the framework libGDX.",
+        "part2": "The game consists of controlling a sbumarine and dodge obstacles while getting batteries. The game gets darker as the players go down and the batteries become more and more important to see the obstacles."
       }
     },
     "kawaiiChat": {
@@ -50,9 +49,15 @@
       }
     },
     "investmentBlog": {
-      "title": "InvestmentBlog (em desenvolvimento)",
+      "title": "InvestmentBlog (in development)",
       "description": {
-        "part1": "Em desenvolvimento (utilizando MERN stack e Docker)"
+        "part1": "In development (using MERN stack and Docker)"
+      }
+    },
+    "githubPages": {
+      "title": "well1ngton.github.io (portfolio)",
+      "description": {
+        "part1": "Developed with React, Typescript, Bootstrap and i18next for multilanguage support."
       }
     }
   }
